src/styles.scss
.block {
  width: 100% !important;
  margin-inline: 0 !important;
  flex: 0 0 100% !important;
};

.placeholder,
*::placeholder {
  color: var(--color-placeholder, var(--color-text, #888)) !important;
  opacity: 0.5 !important;
}

%invalid {
  --color-border: var(--color-error, red) !important;
  --color-text: var(--color-error, red) !important;
  --color-bg: color-mix(in srgb, var(--color-error, red) 5%, transparent) !important;
}

%panel {
  background: var(--color-bg, #fff);
  color: var(--color-text, #333);
  box-shadow: inset 0 0 0 var(--border-width, 1px) var(--color-border, #8884);
  border-radius: var(--radius, 0.25rem);
}

%input {
  --spacing: 0.5rem;
  --border-width: 1px;

  display: inline-flex;
  align-items: center;
  vertical-align: middle;
  gap: var(--spacing);
  padding: 0 var(--spacing);
  min-height: calc(1em + 2 * var(--spacing));
  background: var(--color-bg, #fff);
  color: var(--color-text, currentcolor);
  box-sizing: border-box;
  box-shadow: inset 0 0 0 var(--border-width) var(--color-border, #8886);
  border-radius: var(--radius, 0.25em);
  
  &:focus-within { --color-border: var(--color-accent, #333); }

  .placeholder { opacity: 0.5; }

  .icon {
    --size: 1rem;

    cursor: pointer;
    display: inline-block;
  }

  .invalid:not(:focus-within) &,
  &.invalid:not(:focus-within),
  &:not(:focus-within):has(:invalid) { @extend %invalid; }
}

%disabled {
  --color-bg: color-mix(in srgb, var(--color-disabled, #8886) 10%, transparent) !important;
  --color-text: var(--color-disabled, #8886) !important;
  --border-width: 0 !important;

  cursor: not-allowed !important;

  // stylelint-disable-next-line selector-pseudo-class-no-unknown
  :deep(*) { pointer-events: none !important; }
}

%selector-toggler {
  @extend %input;

  display: flex;
  align-items: center;
  
  &.disabled { @extend %disabled; }

  .selected,
  .placeholder {
    flex: 1;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }
}

